Fixed Tabs and cards

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="blue-grey darken-4">
   <div class="nav-wrapper">
     <a class="brand-logo"><i class="material-icons">cloud</i>STREAMER DASHBOARD</a>
     <ul class="hide-on-med-and-down right">
