--- a/client/src/app/pages/users/users.component.html
+++ b/client/src/app/pages/users/users.component.html
@@ -1,3 +1,22 @@
+<div class="card">
+    <div class="card-content blue-grey darken-3">
+      <h3 class="white-text">Users</h3>
+    </div>
+    <div class="card-tabs">
+      <ul class="tabs tabs-fixed-width blue-grey darken-3">
+        <li class="tab"><a href="#users-tab1" class="active white-text">Tab 1</a></li>
+        <li class="tab"><a href="#users-tab2" class="white-text">Tab 2</a></li>
+        <li class="tab"><a href="#users-tab3" class="white-text">Tab 3</a></li>
+      </ul>
+    </div>
+    <div class="card-content blue-grey lighten-5">
+      <div id="users-tab1">Tab 1 contant</div>
+      <div id="users-tab2">Tab 2 contant</div>
+      <div id="users-tab3">Tab 3 contant</div>
+    </div>
+  </div>
+
+
 <div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
     <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
       <div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 175px;">
