--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -2,7 +2,7 @@
  * @Author: Nizars
  * @Date: 2018-06-02 22:34:02
  * @Last Modified by: Nizars
- * @Last Modified time: 2018-06-12 03:25:43
+ * @Last Modified time: 2018-06-13 15:02:57
  */
 
 // PAGE
@@ -60,7 +60,7 @@
   // background: #343A40;
   // overflow: hidden;
   height: 100vh;
-  background: #2196F3;
+  background: #37474f;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -81,7 +81,7 @@
   min-width: 64px;
   max-width: 250px;
   height: 100%;
-  background: #2196F3;
+  background: #37474f;
   left: 0;
   // overflow: hidden;
 }
