--- a/client/src/app/pages/games/games.component.html
+++ b/client/src/app/pages/games/games.component.html
@@ -1,19 +1,17 @@
-<div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
-        <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
-
-            <div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 175px;">
-                <div style="padding: 50px 50px 0px 50px; font-size: 44px; color: white;">Games</div>
-                <div style="padding: 0px 50px 50px 50px; font-size: 16px; font-weight: lighter; color: white;">Games page</div>
-            </div>
-            <div class="container">
-                <br />
-
-                <!-- Card  -->
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center">
-                    </div>
-                </div>
-            </div>
-
-        </div>
+<div class="card">
+    <div class="card-content blue-grey darken-3">
+      <h3 class="white-text">Games</h3>
     </div>
+    <div class="card-tabs">
+      <ul class="tabs tabs-fixed-width blue-grey darken-3">
+        <li class="tab"><a href="#games-tab1" class="active white-text">Tab 1</a></li>
+        <li class="tab"><a href="#games-tab2" class="white-text">Tab 2</a></li>
+        <li class="tab"><a href="#games-tab3" class="white-text">Tab 3</a></li>
+      </ul>
+    </div>
+    <div class="card-content blue-grey lighten-5">
+      <div id="games-tab1">Tab 1 contant</div>
+      <div id="games-tab2">Tab 2 contant</div>
+      <div id="games-tab3">Tab 3 contant</div>
+    </div>
+  </div>
