--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,54 +1,17 @@
 <div class="card">
-  <div class="card-content grey darken-3">
-    <p class="white-text">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+  <div class="card-content blue-grey darken-3">
+    <h3 class="white-text">Home</h3>
   </div>
   <div class="card-tabs">
-    <ul class="tabs tabs-fixed-width grey darken-1">
-      <li class="tab"><a href="#test4" class="white-text">Test 1</a></li>
-      <li class="tab"><a class="active" href="#test5" class="white-text">Test 2</a></li>
-      <li class="tab"><a href="#test6" class="white-text">Test 3</a></li>
+    <ul class="tabs tabs-fixed-width blue-grey darken-3">
+      <li class="tab"><a href="#home-tab1" class="active white-text">Tab 1</a></li>
+      <li class="tab"><a href="#home-tab2" class="white-text">Tab 2</a></li>
+      <li class="tab"><a href="#home-tab3" class="white-text">Tab 3</a></li>
     </ul>
   </div>
-  <div class="card-content grey lighten-5">
-    <div id="test4">Test 1</div>
-    <div id="test5">Test 2</div>
-    <div id="test6">Test 3</div>
+  <div class="card-content blue-grey lighten-5">
+    <div id="home-tab1">Tab 1 contant</div>
+    <div id="home-tab2">Tab 2 contant</div>
+    <div id="home-tab3">Tab 3 contant</div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
-        <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
-
-            <div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 175px;">
-                <div style="padding: 50px 50px 0px 50px; font-size: 44px; color: white;">Home</div>
-                <div style="padding: 0px 50px 50px 50px; font-size: 16px; font-weight: lighter; color: white;">Home page</div>
-            </div>
-            <div class="container">
-                <br />
-
-                <!-- Card  -->
-                <div class="card-body">
-                    <div class="d-flex justify-content-between align-items-center">
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
