--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,48 +1,50 @@
 <footer class="page-footer blue-grey">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Footer Content</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col l4">
+        <h5 class="white-text">Features</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="#!">Cool stuff</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Random feature</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Team feature</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Stuff for developers</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Another one</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Last time</a></li>
+        </ul>
+      </div>
+      <div class="col l4">
+        <h5 class="white-text">Resources</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="#!">Business</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Education</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Government</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Gaming</a></li>
+        </ul>
+      </div>
+      <div class="col l4">
+        <h5 class="white-text">About</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="#!">Team</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Locations</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Privacy</a></li>
+          <li><a class="grey-text text-lighten-3" href="#!">Terms</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Features</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Cool stuff</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Random feature</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Team feature</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Stuff for developers</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Another one</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Last time</a></li>
-          </ul>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Resources</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Business</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Education</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Government</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Gaming</a></li>
-          </ul>
-        </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">About</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Team</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Locations</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Privacy</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Terms</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-          &copy; NIZOS 2018
+        &copy; NIZOS 2018
       <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-      </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
 
 
