--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -5,10 +5,58 @@
       <li id="nav-search-bar">
         <input class="nav-search" id="search-field" type="search" placeholder="Search" required>
       </li>
-      <li><a id="toggle-search"><i class="material-icons">search</i></a></li>
-      <li><a><i class="material-icons">view_module</i></a></li>
-      <li><a><i class="material-icons">account_circle</i></a></li>
-      <li><a><i class="material-icons">more_vert</i></a></li>
+      <li> <!-- Nav Search Button Trigger -->
+        <a class="navbar-buttons" id="toggle-search">
+          <i class="btn navbar-btn waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" data-position="bottom" data-tooltip="Search">
+            <i class="material-icons">search</i>
+          </i>
+        </a>
+      </li>
+      <li> <!-- View Module Dropdown Trigger -->
+        <a class="navbar-buttons">
+          <i class="btn navbar-btn dropdown-trigger waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" href='#' data-target='view-module-dropdown' data-position="bottom" data-tooltip="Views">
+            <i class="material-icons">view_module</i>
+          </i>
+        </a>
+      </li>
+      <li> <!-- User Profile Dropdown Trigger -->
+        <a class="navbar-buttons">
+          <i class="btn navbar-btn dropdown-trigger waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" href='#' data-target='user-profile-dropdown' data-position="bottom" data-tooltip="Account">
+            <i class="material-icons">account_circle</i>
+          </i>
+        </a>
+      </li>
+      <li> <!-- More Options Dropdown Trigger -->
+        <a class="navbar-buttons">
+          <i class="btn navbar-btn dropdown-trigger waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" href='#' data-target='more-options-dropdown' data-position="bottom" data-tooltip="More">
+            <i class="material-icons">more_vert</i>
+          </i>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
+
+<!-- View Module Dropdown Structure -->
+<ul id='view-module-dropdown' class='dropdown-content'>
+  <li><a href="#!">View 1</a></li>
+  <li><a href="#!">View 2</a></li>
+  <li class="divider" tabindex="-1"></li>
+  <li><a href="#!">Options</a></li>
+</ul>
+
+<!-- User Profile Dropdown Structure -->
+<ul id='user-profile-dropdown' class='dropdown-content'>
+  <li><a href="#!">Profile</a></li>
+  <li><a href="#!">Settings</a></li>
+  <li class="divider" tabindex="-1"></li>
+  <li><a href="#!">Sign Out</a></li>
+</ul>
+
+<!-- More Options Dropdown Structure -->
+<ul id='more-options-dropdown' class='dropdown-content'>
+  <li><a href="#!">Refresh</a></li>
+  <li><a href="#!">Mobile</a></li>
+  <li class="divider" tabindex="-1"></li>
+  <li><a href="#!">Support</a></li>
+</ul>
