Moved sign in/out to navbar

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -19,9 +19,16 @@
           </i>
         </a>
       </li>
-      <li> <!-- User Profile Dropdown Trigger -->
+      <li *ngIf="authService.signedIn()"> <!-- User Profile Dropdown Trigger -->
         <a class="navbar-buttons">
           <i class="btn navbar-btn dropdown-trigger waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" href='#' data-target='user-profile-dropdown' data-position="bottom" data-tooltip="Account">
+            <i class="material-icons">account_circle</i>
+          </i>
+        </a>
+      </li>
+      <li *ngIf="!authService.signedIn()"> <!-- SIGN IN BUTTON -->
+        <a class="navbar-buttons">
+          <i class="btn navbar-btn waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" data-position="bottom" data-tooltip="Sign In" routerLink="/signin" routerLinkActive="active" [class.activated]="currentUrl == '/signin'">
             <i class="material-icons">account_circle</i>
           </i>
         </a>
@@ -50,7 +57,7 @@
   <li><a href="#!">Profile</a></li>
   <li><a href="#!">Settings</a></li>
   <li class="divider" tabindex="-1"></li>
-  <li><a href="#!">Sign Out</a></li>
+  <li><a (click)="logout()" routerLinkActive="active" [class.activated]="currentUrl == '/signout'">Sign Out</a></li>
 </ul>
 
 <!-- More Options Dropdown Structure -->
