Switched to ngx-materialize

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       </li>
       <li> <!-- View Module Dropdown Trigger -->
         <a class="navbar-buttons">
-          <i class="btn navbar-btn dropdown-trigger waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" href='#' data-target='view-module-dropdown' data-position="bottom" data-tooltip="Views">
+          <i materialize="dropdown-trigger" class="btn navbar-btn dropdown-trigger waves-effect waves-light blue-grey darken-4 z-depth-0 tooltipped" href='#' data-target='view-module-dropdown' data-position="bottom" data-tooltip="Views">
             <i class="material-icons">view_module</i>
           </i>
         </a>
@@ -45,7 +45,7 @@
 </nav>
 
 <!-- View Module Dropdown Structure -->
-<ul id='view-module-dropdown' class='dropdown-content'>
+<ul materialize="dropdown-content" id='view-module-dropdown' class='dropdown-content'>
   <li><a href="#!">View 1</a></li>
   <li><a href="#!">View 2</a></li>
   <li class="divider" tabindex="-1"></li>
