--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
       </a>
     </li>
     <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Streams" routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'">
+      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="videos" routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'">
         <i class="btn-content-row row">
           <i class="material-icons left">subscriptions</i>
           <i class="btn-text left-align">Videos</i>
