--- a/client/src/app/pages/signin/signin.component.html
+++ b/client/src/app/pages/signin/signin.component.html
@@ -1,96 +1,35 @@
 <div class="card">
-    <div class="card-content blue-grey darken-3">
-      <h3 class="white-text">Sign in</h3>
-    </div>
-    <div class="card-tabs">
-      <ul class="tabs tabs-fixed-width blue-grey darken-3">
-        <li class="tab"><a href="#signin-tab1" class="active white-text">Tab 1</a></li>
-        <li class="tab"><a href="#signin-tab2" class="white-text">Tab 2</a></li>
-        <li class="tab"><a href="#signin-tab3" class="white-text">Tab 3</a></li>
-      </ul>
-    </div>
-    <div class="card-content blue-grey lighten-5">
-      <div id="signin-tab1">Tab 1 contant</div>
-      <div id="signin-tab2">Tab 2 contant</div>
-      <div id="signin-tab3">Tab 3 contant</div>
+  <div class="card-content blue-grey darken-3">
+    <h3 class="white-text">Sign in</h3>
+  </div>
+  <div class="card-content blue-grey lighten-5">
+    <div id="card-body">
+      <div class="progress" *ngIf="loading()">
+        <div class="indeterminate"></div>
+      </div>
+      <div class="row">
+        <div class="col l4">
+          <a class="waves-effect waves-light btn twitch-btn" (click)="loadingStart()" href="http://localhost:3000/auth/twitch">
+            <div class="valign-wrapper">
+              <img class="twitch-icon left" src="../../../assets/images/Twitch/GlitchIcon_White_32px.png">Connect with Twitch
+            </div>
+          </a>
+        </div>
+        <div class="col l8">
+          <div id="sign-in-page-pic">
+            <div class="row">
+                <div class="col s12 m7">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="../../../assets/images/signin/DashboardImage.png">
+                            <div class="card-title">Streamer Dashboard</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-
-<div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
-    <div class="bg-white box-shadow mx-auto" style="width: 100%; border-radius: 21px 21px 21px 21px; padding-bottom: 0px; margin-bottom: 0px;">
-
-            <!-- Card  -->
-            <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-
-
-
-
-                    <section class="login-block">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4 login-sec">
-                                    <h2 class="text-center">Login Now</h2>
-                                    <form class="login-form">
-
-                                            <a class="twitch-button-link" href="http://localhost:3000/auth/twitch"><button type="button" class="btn twitch-button btn-block" href="http://localhost:3000/auth/twitch"><img class="pull-left" src="'../../assets/images/Twitch/GlitchIcon_White_24px.png"><a>Connect with Twitch</a></button></a>
-
-                                    </form>
-                                    <div class="copy-text">Created by
-                                        <a href="https://www.nizos.com">nizos.tv</a>
-                                    </div>
-                                </div>
-                                <div class="col-md-8 banner-sec">
-                                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                        <ol class="carousel-indicators">
-                                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                        </ol>
-                                        <div class="carousel-inner" role="listbox">
-                                            <div class="carousel-item active">
-                                                <img class="d-block img-fluid" src="../../assets//images//signin//DashboardImage.png" alt="First slide">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <div class="banner-text">
-                                                        <h2>Streamer Dashboard</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                                            minim veniam, quis nostrud exercitation</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img class="d-block img-fluid" src="https://images.pexels.com/photos/7097/people-coffee-tea-meeting.jpg" alt="First slide">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <div class="banner-text">
-                                                        <h2>This is Heaven</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                                            minim veniam, quis nostrud exercitation</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img class="d-block img-fluid" src="https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg" alt="First slide">
-                                                <div class="carousel-caption d-none d-md-block">
-                                                    <div class="banner-text">
-                                                        <h2>This is Heaven</h2>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                                            minim veniam, quis nostrud exercitation</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-                </div>
-            </div>
-
-    </div>
 </div>
