--- a/client/src/app/pages/channels/channels.component.scss
+++ b/client/src/app/pages/channels/channels.component.scss
@@ -16,4 +16,40 @@
     font-weight: lighter;
 }
 
+// .tabs .tab a{
+//   color:#000;
+// } // Black color to the text*/
+
+// .tabs .tab a:hover {
+//   background-color:#eee;
+//   color:#000;
+// } // Text color on hover*/
+
+// .tabs .tab a.active {
+//   background-color:#888;
+//   color:#000;
+// } // Background and text color when a tab is active*/
+
+// .tabs .indicator li{
+//   position: absolute;
+//   bottom: 0;
+//   height: 2px;
+//   background-color: #01c4ec !important;
+//   will-change: left, right;
+// }
+
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+.tabs .tab a{
+  color:#00ACC1;
+}
+.tabs .tab a:hover,.tabs .tab a.active {
+background-color:transparent;
+color:#008B9B;
+}
+.tabs .tab.disabled a,.tabs .tab.disabled a:hover {
+color:rgba(102,147,153,0.7);	
+}
+.tabs .indicator {
+background-color:#009BAD;
+}
