--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -1,92 +1,223 @@
 <nav id="sidebar" class="blue-grey darken-3 ">
   <ul class="list-unstyled">
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-toggler" id="sidebar-button" data-position="right" data-tooltip="Toggle side bar" (click)="toggleSidebar()">
-        <i class="btn-content-row row">
-          <i class="material-icons left">menu</i>
-          <i class="btn-text left-align">Toggle sidebar</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-toggler"
+      id="sidebar-button"
+
+      [tooltip]="'Toggle sidebar'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      (click)="toggleSidebar()">
+
+        <i class="btn-content-row row"><i class="material-icons left">menu</i><i class="btn-text left-align">Toggle sidebar</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Home" routerLink="/home" routerLinkActive="active" [class.activated]="currentUrl == '/home'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">home</i>
-          <i class="btn-text left-align">Home</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Home'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/home"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/home'">
+
+        <i class="btn-content-row row"><i class="material-icons left">home</i><i class="btn-text left-align">Home</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Dashboard" routerLink="/dashboard" routerLinkActive="active" [class.activated]="currentUrl == '/dashboard'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">dashboard</i>
-          <i class="btn-text left-align">Dashboard</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Dashboard'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/dashboard"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/dashboard'">
+
+        <i class="btn-content-row row"><i class="material-icons left">dashboard</i><i class="btn-text left-align">Dashboard</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Channels" routerLink="/channels" routerLinkActive="active" [class.activated]="currentUrl == '/channels'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">web</i>
-          <i class="btn-text left-align">Channels</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Channels'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/channels"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/channels'">
+
+        <i class="btn-content-row row"><i class="material-icons left">web</i><i class="btn-text left-align">Channels</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="videos" routerLink="/videos" routerLinkActive="active" [class.activated]="currentUrl == '/videos'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">subscriptions</i>
-          <i class="btn-text left-align">Videos</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Videos'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/videos"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/videos'">
+
+        <i class="btn-content-row row"><i class="material-icons left">subscriptions</i><i class="btn-text left-align">Videos</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Clips" routerLink="/clips" routerLinkActive="active" [class.activated]="currentUrl == '/clips'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">movie</i>
-          <i class="btn-text left-align">Clips</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Dashboard'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/Clips"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/clips'">
+
+        <i class="btn-content-row row"><i class="material-icons left">movie</i><i class="btn-text left-align">Clips</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Streams" routerLink="/streams" routerLinkActive="active" [class.activated]="currentUrl == '/streams'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">ondemand_video</i>
-          <i class="btn-text left-align">Streams</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Streams'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/streams"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/streams'">
+
+        <i class="btn-content-row row"><i class="material-icons left">ondemand_video</i><i class="btn-text left-align">Streams</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Users" routerLink="/users" routerLinkActive="active" [class.activated]="currentUrl == '/users'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">group</i>
-          <i class="btn-text left-align">Users</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Users'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/users"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/users'">
+
+        <i class="btn-content-row row"><i class="material-icons left">group</i><i class="btn-text left-align">Users</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Games" routerLink="/games" routerLinkActive="active" [class.activated]="currentUrl == '/games'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">games</i>
-          <i class="btn-text left-align">Games</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Games'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/games"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/games'">
+
+        <i class="btn-content-row row"><i class="material-icons left">games</i><i class="btn-text left-align">Games</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Chat" routerLink="/chat" routerLinkActive="active" [class.activated]="currentUrl == '/chat'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">chat</i>
-          <i class="btn-text left-align">Chat</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Chat'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/chat"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/chat'">
+
+        <i class="btn-content-row row"><i class="material-icons left">chat</i><i class="btn-text left-align">Chat</i></i>
+
+      </button>
     </li>
-    <li class="expanded">
-      <a class="btn waves-effect waves-light blue-grey darken-3 tooltipped z-depth-0" id="sidebar-button" data-position="right" data-tooltip="Bot" routerLink="/bot" routerLinkActive="active" [class.activated]="currentUrl == '/bot'">
-        <i class="btn-content-row row">
-          <i class="material-icons left">adb</i>
-          <i class="btn-text left-align">Bot</i>
-        </i>
-      </a>
+
+    <li class="sidebar-item expanded">
+      <button mz-button mz-tooltip
+
+      class="sidebar-btn btn waves-effect waves-light blue-grey darken-3 z-depth-0"
+      id="sidebar-button"
+
+      [tooltip]="'Bot'"
+      [position]="'right'"
+      [html]="true"
+      [delay]="tooltipDelay"
+
+      routerLink="/bot"
+      routerLinkActive="active"
+      [class.activated]="currentUrl == '/bot'">
+
+        <i class="btn-content-row row"><i class="material-icons left">adb</i><i class="btn-text left-align">Bot</i></i>
+
+      </button>
     </li>
+
   </ul>
 </nav>
